parser/test/errors/error2.demo
// error program
procedure main {
    int a[1:10]  // missing semicolone
    char c;

    for i = 1 to 10 by 1 {
        a[i] = 1;
    }
    
    if(a = 1) then write a;    // equal should be '=='
}